azureps-cmdlets-docs/ServiceManagement/Azure.SiteRecovery/v0.9.8/Azure.SiteRecovery.md
---
Module Name: Azure.SiteRecovery
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: {{Please enter FwLink manually}}
Help Version: {{Please enter version of help manually (X.X.X.X) format}}
Locale: en-US
ms.assetid: B860FED2-CDD6-4ED3-A1CA-D0FD338FE15B
---

# Azure.SiteRecovery Module
## Description
This topic displays help topics for the Azure Site Recovery Services Cmdlets. 

## Azure.SiteRecovery Cmdlets
### [Get-AzureSiteRecoveryJob](./Get-AzureSiteRecoveryJob.md)
Gets Azure Site Recovery jobs.


### [Get-AzureSiteRecoveryNetwork](./Get-AzureSiteRecoveryNetwork.md)
Gets Azure Site Recovery networks for the current vault.


### [Get-AzureSiteRecoveryNetworkMapping](./Get-AzureSiteRecoveryNetworkMapping.md)
Gets mappings of Azure Site Recovery networks for the current vault.


### [Get-AzureSiteRecoveryProtectionContainer](./Get-AzureSiteRecoveryProtectionContainer.md)
Gets protected containers for a vault.


### [Get-AzureSiteRecoveryProtectionEntity](./Get-AzureSiteRecoveryProtectionEntity.md)
Gets protected objects in Azure Site Recovery.


### [Get-AzureSiteRecoveryRecoveryPlan](./Get-AzureSiteRecoveryRecoveryPlan.md)
Gets information about an Azure Site Recovery plan.


### [Get-AzureSiteRecoveryRecoveryPlanFile](./Get-AzureSiteRecoveryRecoveryPlanFile.md)
Downloads an Azure Site Recovery plan in XML format.


### [Get-AzureSiteRecoveryServer](./Get-AzureSiteRecoveryServer.md)
Gets information about an Azure Site Recovery server.


### [Get-AzureSiteRecoverySite](./Get-AzureSiteRecoverySite.md)
Gets Azure Site Recovery sites in a vault.


### [Get-AzureSiteRecoveryStorage](./Get-AzureSiteRecoveryStorage.md)
Gets Azure Site Recovery Storages for the current vault.


### [Get-AzureSiteRecoveryStorageMapping](./Get-AzureSiteRecoveryStorageMapping.md)
Gets mappings of Azure Site Recovery Storage objects for the current vault.


### [Get-AzureSiteRecoveryVault](./Get-AzureSiteRecoveryVault.md)
Gets the active Azure Site Recovery vault.


### [Get-AzureSiteRecoveryVaultSettings](./Get-AzureSiteRecoveryVaultSettings.md)
Gets settings information about an Azure Site Recovery vault.


### [Get-AzureSiteRecoveryVaultSettingsFile](./Get-AzureSiteRecoveryVaultSettingsFile.md)
Gets the settings file for an Azure Site Recovery vault.


### [Get-AzureSiteRecoveryVM](./Get-AzureSiteRecoveryVM.md)
Gets information about virtual machines managed by Azure Site Recovery.


### [Import-AzureSiteRecoveryVaultSettingsFile](./Import-AzureSiteRecoveryVaultSettingsFile.md)
Imports a vault settings file for Azure Site Recovery.


### [New-AzureSiteRecoveryNetworkMapping](./New-AzureSiteRecoveryNetworkMapping.md)
Creates a mapping between a network and an Azure Site Recovery network.


### [New-AzureSiteRecoveryProtectionProfileObject](./New-AzureSiteRecoveryProtectionProfileObject.md)
Creates an Azure Site Recovery protection profile object.


### [New-AzureSiteRecoveryRecoveryPlan](./New-AzureSiteRecoveryRecoveryPlan.md)
Adds a recovery plan to an Azure Site Recovery vault.


### [New-AzureSiteRecoverySite](./New-AzureSiteRecoverySite.md)
Creates an Azure Site Recovery site.


### [New-AzureSiteRecoveryStorageMapping](./New-AzureSiteRecoveryStorageMapping.md)
Creates a mapping between an Azure Storage object and recovery Storage object.


### [New-AzureSiteRecoveryVault](./New-AzureSiteRecoveryVault.md)
Creates an Azure Site Recovery vault.


### [Remove-AzureSiteRecoveryNetworkMapping](./Remove-AzureSiteRecoveryNetworkMapping.md)
Removes a network mapping for the current vault.


### [Remove-AzureSiteRecoveryRecoveryPlan](./Remove-AzureSiteRecoveryRecoveryPlan.md)
Removes a recovery plan from an Azure Site Recovery vault.


### [Remove-AzureSiteRecoveryStorageMapping](./Remove-AzureSiteRecoveryStorageMapping.md)
Removes a Storage object mapping for the current Azure Site Recovery vault.


### [Restart-AzureSiteRecoveryJob](./Restart-AzureSiteRecoveryJob.md)
Restarts an Azure Site Recovery job.


### [Resume-AzureSiteRecoveryJob](./Resume-AzureSiteRecoveryJob.md)
Resumes a suspended job in Azure Site Recovery.


### [Set-AzureSiteRecoveryProtectionEntity](./Set-AzureSiteRecoveryProtectionEntity.md)
Enables or disables protection in Azure Site Recovery.


### [Set-AzureSiteRecoveryVM](./Set-AzureSiteRecoveryVM.md)
Allows the update on a protected virtual machine.


### [Start-AzureSiteRecoveryCommitFailoverJob](./Start-AzureSiteRecoveryCommitFailoverJob.md)
Starts a commit failover of the Azure Site Recovery object after failover.


### [Start-AzureSiteRecoveryPlannedFailoverJob](./Start-AzureSiteRecoveryPlannedFailoverJob.md)
Starts a planned failover in Azure Site Recovery.


### [Start-AzureSiteRecoveryProtectionProfileAssociationJob](./Start-AzureSiteRecoveryProtectionProfileAssociationJob.md)
Starts a job to associate a protection profile to protection containers.


### [Start-AzureSiteRecoveryProtectionProfileDissociationJob](./Start-AzureSiteRecoveryProtectionProfileDissociationJob.md)
Starts a job to dissociate a protection profile from a protection container.


### [Start-AzureSiteRecoveryTestFailoverJob](./Start-AzureSiteRecoveryTestFailoverJob.md)
Starts the test failover for a protected entity or for a recovery plan.


### [Start-AzureSiteRecoveryUnplannedFailoverJob](./Start-AzureSiteRecoveryUnplannedFailoverJob.md)
Starts the Unplanned Failover operation for a protection entity or recovery plan.


### [Stop-AzureSiteRecoveryJob](./Stop-AzureSiteRecoveryJob.md)
Stops an Azure Site Recovery job.


### [Update-AzureSiteRecoveryProtectionDirection](./Update-AzureSiteRecoveryProtectionDirection.md)
Updates the source and target server for protection for an Azure Site Recovery object.


### [Update-AzureSiteRecoveryProtectionEntity](./Update-AzureSiteRecoveryProtectionEntity.md)
Updates the properties of a protection entity in Azure Site Recovery.


### [Update-AzureSiteRecoveryRecoveryPlan](./Update-AzureSiteRecoveryRecoveryPlan.md)
Changes a recovery plan structure, and then publishes it.



